objects/SH2__DSH_Storage_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>SH2__Ignore__c</fullName>
        <label>Compositions To Ignore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH2__Increase_From_Last_Month__c</fullName>
        <inlineHelpText>Storage usage increase from last month.</inlineHelpText>
        <label>Storage Usage Increase From Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SH2__Number_Of_Records__c</fullName>
        <label>Number Of Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SH2__Object_Month_Year__c</fullName>
        <label>Object - Month And Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH2__Object_Prefix__c</fullName>
        <label>Object Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH2__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH2__Percent_Of_Usage__c</fullName>
        <inlineHelpText>Percent of total storage usage that is used by this object.</inlineHelpText>
        <label>Percent Of Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SH2__Record_Composition__c</fullName>
        <label>Record Composition</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SH2__Storage_Usage__c</fullName>
        <label>Storage Usage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Storage Helper Usage Tracking</label>
    <nameField>
        <label>Usage Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Storage Helper Usage Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>